--- a/02HTML/index.html
+++ b/02HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mi primera pagina web</title>
+    <title>mi primera página web</title>
 </head>
 <body>
     <h1>Hola bienvenido</h1>
@@ -12,6 +12,6 @@
     <h2>lentos</h2>
     <br>
     <h3>muevanlas</h3>
-        
+
 </body>
 </html>
