--- a/02HTML/index.html
+++ b/02HTML/index.html
@@ -7,9 +7,9 @@
     <title>mi primera página web</title>
 </head>
 <body>
-    <h1>Hola bienvenido</h1>
+    <h1>Holaaaa soy Eldad</h1>
     <br>
-    <h2>lentos</h2>
+    <h2>y ni modoooo</h2>
     <br>
     <h3>muevanlas</h3>
 
