--- a/03loggin/loggin.html
+++ b/03loggin/loggin.html
@@ -24,12 +24,18 @@
         <a href="#">recuperar contraseña</a>
 
         <div class="button">
-            <button><img src="C:\Users\Alumno\Desktop\Hoy\images\facebook.png" 
+            <button><img src="F:\images\facebook.png" 
                 alt="facebook"></button>
-            <button><img src="C:\Users\Alumno\Desktop\Hoy\images\google.png" 
+            <button><img src="F:\images\google.png" 
                 alt="google"></button>
         </div>
+        <div><img src="" alt=""></div>
     </div>
 
+    <div class="background"> 
+        <background><img scr="F:\images\fondo.jpg"></background>
+        
+
+    </div>
 </body>
 </html>
