--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -174,7 +174,7 @@
             <br>
             <li>Fashion Ilustration on Crahana</li>
             <br>
-            <li>Digial Ilustration in Creahana</li>
+            <li>Digital Ilustration in Creahana</li>
             <br>
             <li>Fashion Styling and Editorial Profuction
                 by Ana Gomez
